--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-bugme (10.0.1-0debathena2) unstable; urgency=low
+
+  * Use machtype -q to determine if a workstation is a quickstation.
+
+ -- Evan Broder <broder@mit.edu>  Mon, 05 Oct 2009 15:55:48 -0400
+
 debathena-bugme (10.0.1-0debathena1) unstable; urgency=low
 
   * Add a handler for timer window visibility events, to raise the
