--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-bugme (10.0.6-0debathena1) UNRELEASED; urgency=low
+
+  * Release 10.0.6.
+
+ -- Alexander Chernyakhovsky <achernya@mit.edu>  Fri, 07 Mar 2014 22:55:18 -0500
+
 debathena-bugme (10.0.5-0debathena2) unstable; urgency=low
 
   [ Jonathan Reed ]
